--- a/index.html
+++ b/index.html
@@ -9,6 +9,43 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
+
+    <header>
+        <div class="container">
+            <h1>JavaScript Numbers Counter</h1>
+        </div>
+    </header>
+
+    <section class="counters">
+        <div class="container">
+            <div>
+                <i class="fab fa-youtube fa-4x"></i>
+                <div class="counter" data-target="1364">00</div>
+                <h3>Inscritos</h3>
+            </div>
+        </div>
+        <div class="container">
+            <div>
+                <i class="fab fa-twitter fa-4x"></i>
+                <div class="counter" data-target="325">00</div>
+                <h3>Seguidores</h3>
+            </div>
+        </div>
+        <div class="container">
+            <div>
+                <i class="fab fa-facebook fa-4x"></i>
+                <div class="counter" data-target="8380">00</div>
+                <h3>Likes</h3>
+            </div>
+        </div>
+        <div class="container">
+            <div>
+                <i class="fab fa-linkedin fa-4x"></i>
+                <div class="counter" data-target="121">00</div>
+                <h3>Conexões</h3>
+            </div>
+        </div>
+    </section>
     
     <script src="app.js"></script>
 </body>
